--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
+    <width>657</width>
     <height>480</height>
    </rect>
   </property>
@@ -19,12 +19,215 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>640</width>
+     <width>657</width>
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menu_File">
+    <property name="title">
+     <string>&amp;File</string>
+    </property>
+    <addaction name="actionOptions"/>
+    <addaction name="separator"/>
+    <addaction name="actionExit"/>
+   </widget>
+   <widget class="QMenu" name="menu_Edit">
+    <property name="title">
+     <string>&amp;Action</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menu_View">
+    <property name="title">
+     <string>&amp;View</string>
+    </property>
+    <addaction name="actionAddRemoveColumns"/>
+    <addaction name="separator"/>
+    <addaction name="actionSmallIconView"/>
+    <addaction name="actionLargeIconView"/>
+    <addaction name="actionCompactListView"/>
+    <addaction name="actionDetailedListView"/>
+    <addaction name="separator"/>
+    <addaction name="actionSelectDC"/>
+    <addaction name="separator"/>
+    <addaction name="actionCustomize"/>
+   </widget>
+   <widget class="QMenu" name="menu_Help">
+    <property name="title">
+     <string>&amp;Help</string>
+    </property>
+   </widget>
+   <addaction name="menu_File"/>
+   <addaction name="menu_Edit"/>
+   <addaction name="menu_View"/>
+   <addaction name="menu_Help"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionGoBack"/>
+   <addaction name="actionGoForward"/>
+   <addaction name="actionGoUp"/>
+   <addaction name="actionReload"/>
+   <addaction name="separator"/>
+   <addaction name="actionSmallIconView"/>
+   <addaction name="actionLargeIconView"/>
+   <addaction name="actionCompactListView"/>
+   <addaction name="actionDetailedListView"/>
+   <addaction name="separator"/>
+  </widget>
+  <action name="actionGoBack">
+   <property name="icon">
+    <iconset theme="go-previous">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>Go &amp;Back</string>
+   </property>
+   <property name="toolTip">
+    <string>Go Back</string>
+   </property>
+   <property name="shortcut">
+    <string>Alt+Left</string>
+   </property>
+  </action>
+  <action name="actionGoForward">
+   <property name="icon">
+    <iconset theme="go-next">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="text">
+    <string>Go &amp;Forward</string>
+   </property>
+   <property name="toolTip">
+    <string>Go Forward</string>
+   </property>
+   <property name="shortcut">
+    <string>Alt+Right</string>
+   </property>
+  </action>
+  <action name="actionGoUp">
+   <property name="icon">
+    <iconset theme="go-up"/>
+   </property>
+   <property name="text">
+    <string>Go &amp;Up</string>
+   </property>
+   <property name="toolTip">
+    <string>Go Up</string>
+   </property>
+   <property name="shortcut">
+    <string>Alt+Up</string>
+   </property>
+  </action>
+  <action name="actionReload">
+   <property name="icon">
+    <iconset theme="reload"/>
+   </property>
+   <property name="text">
+    <string>&amp;Reload</string>
+   </property>
+   <property name="toolTip">
+    <string>Reload</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
+   </property>
+  </action>
+  <action name="actionSmallIconView">
+   <property name="text">
+    <string>&amp;Small Icon View</string>
+   </property>
+   <property name="toolTip">
+    <string>Small Icon View</string>
+   </property>
+  </action>
+  <action name="actionLargeIconView">
+   <property name="text">
+    <string>&amp;Large Icon View</string>
+   </property>
+   <property name="toolTip">
+    <string>Large Icon View</string>
+   </property>
+  </action>
+  <action name="actionCompactListView">
+   <property name="text">
+    <string>&amp;Compact List View</string>
+   </property>
+   <property name="toolTip">
+    <string>Compact List View</string>
+   </property>
+  </action>
+  <action name="actionOptions">
+   <property name="icon">
+    <iconset theme="settings"/>
+   </property>
+   <property name="text">
+    <string>&amp;Options</string>
+   </property>
+   <property name="toolTip">
+    <string>Options</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="icon">
+    <iconset theme="exit"/>
+   </property>
+   <property name="text">
+    <string>&amp;Exit</string>
+   </property>
+   <property name="toolTip">
+    <string>Exit</string>
+   </property>
+  </action>
+  <action name="actionAddRemoveColumns">
+   <property name="text">
+    <string>&amp;Add/Remove Columns</string>
+   </property>
+   <property name="toolTip">
+    <string>Add/Remove Columns</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+A</string>
+   </property>
+  </action>
+  <action name="actionDetailedListView">
+   <property name="text">
+    <string>&amp;Detailed List View</string>
+   </property>
+   <property name="toolTip">
+    <string>Detailed List View</string>
+   </property>
+  </action>
+  <action name="actionSelectDC">
+   <property name="text">
+    <string>&amp;Select DC</string>
+   </property>
+   <property name="toolTip">
+    <string>Select Domain Controller</string>
+   </property>
+  </action>
+  <action name="actionCustomize">
+   <property name="text">
+    <string>&amp;Customize</string>
+   </property>
+   <property name="toolTip">
+    <string>Customize</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
