--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -72,6 +72,10 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="actionOpenPolicyDirectory"/>
+    <addaction name="separator"/>
+    <addaction name="actionOpenRegistrySource"/>
+    <addaction name="separator"/>
     <addaction name="actionOptions"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
@@ -100,7 +104,6 @@
     <property name="title">
      <string>&amp;Help</string>
     </property>
-    <addaction name="actionOpen_Policy_Directory"/>
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Edit"/>
@@ -278,12 +281,20 @@
     <string>Customize</string>
    </property>
   </action>
-  <action name="actionOpen_Policy_Directory">
+  <action name="actionOpenPolicyDirectory">
    <property name="text">
     <string>Open &amp;Policy Directory</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="actionOpenRegistrySource">
+   <property name="text">
+    <string>Open &amp;Registry Source</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
    </property>
   </action>
  </widget>
