wip: add base of a preferences implementation

--- a/src/plugins/preferences/drives/driveswidget.ui
+++ b/src/plugins/preferences/drives/driveswidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>380</width>
-    <height>413</height>
+    <height>443</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -66,7 +66,7 @@
    <item row="2" column="0">
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
-      <widget class="QCheckBox" name="checkBox_4">
+      <widget class="QCheckBox" name="reconnectCheckBox">
        <property name="layoutDirection">
         <enum>Qt::RightToLeft</enum>
        </property>
@@ -79,27 +79,27 @@
       </widget>
      </item>
      <item row="0" column="0">
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="pathLabel">
        <property name="text">
         <string>Location:</string>
        </property>
        <property name="buddy">
-        <cstring>lineEdit</cstring>
+        <cstring>pathLineEdit</cstring>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLabel" name="label_3">
+      <widget class="QLabel" name="labelLabel">
        <property name="text">
         <string>Label as:</string>
        </property>
        <property name="buddy">
-        <cstring>lineEdit_2</cstring>
+        <cstring>labelLineEdit</cstring>
        </property>
       </widget>
      </item>
      <item row="1" column="2">
-      <widget class="QLineEdit" name="lineEdit_2">
+      <widget class="QLineEdit" name="labelLineEdit">
        <property name="font">
         <font>
          <family>Sans Serif</family>
@@ -111,7 +111,7 @@
       </widget>
      </item>
      <item row="0" column="3">
-      <widget class="QToolButton" name="toolButton">
+      <widget class="QToolButton" name="pathToolButton">
        <property name="font">
         <font>
          <family>Sans Serif</family>
@@ -123,7 +123,7 @@
       </widget>
      </item>
      <item row="0" column="1" colspan="2">
-      <widget class="QLineEdit" name="lineEdit">
+      <widget class="QLineEdit" name="pathLineEdit">
        <property name="font">
         <font>
          <family>Sans Serif</family>
@@ -137,24 +137,24 @@
     </layout>
    </item>
    <item row="3" column="0">
-    <widget class="QGroupBox" name="groupBox">
+    <widget class="QGroupBox" name="driveLetterGroupBox">
      <property name="title">
       <string>DriveLetter</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item>
-           <widget class="QRadioButton" name="radioButton_2">
+           <widget class="QRadioButton" name="existingRadioButton">
             <property name="text">
              <string>Existing:</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="radioButton">
+           <widget class="QRadioButton" name="firstAvailableRadioButton">
             <property name="text">
              <string>Use first available, starting at:</string>
             </property>
@@ -163,12 +163,15 @@
          </layout>
         </item>
         <item>
-         <widget class="QComboBox" name="comboBox_2">
+         <widget class="QComboBox" name="driveComboBox">
           <property name="font">
            <font>
             <family>Sans Serif</family>
             <pointsize>9</pointsize>
            </font>
+          </property>
+          <property name="currentText">
+           <string/>
           </property>
          </widget>
         </item>
@@ -178,23 +181,23 @@
     </widget>
    </item>
    <item row="4" column="0">
-    <widget class="QGroupBox" name="groupBox_2">
+    <widget class="QGroupBox" name="connectAsGroupBox">
      <property name="title">
       <string>Connect as (optional)</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
-       <widget class="QLabel" name="label_4">
+       <widget class="QLabel" name="userNameLabel">
         <property name="text">
          <string>User name:</string>
         </property>
         <property name="buddy">
-         <cstring>lineEdit_4</cstring>
+         <cstring>userNameLineEdit</cstring>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QLineEdit" name="lineEdit_4">
+       <widget class="QLineEdit" name="userNameLineEdit">
         <property name="font">
          <font>
           <family>Sans Serif</family>
@@ -207,19 +210,19 @@
        </widget>
       </item>
       <item row="1" column="0" colspan="2">
-       <layout class="QHBoxLayout" name="horizontalLayout">
+       <layout class="QHBoxLayout" name="userLayout">
         <item>
-         <widget class="QLabel" name="label_6">
+         <widget class="QLabel" name="passwordLabel">
           <property name="text">
            <string>Password:</string>
           </property>
           <property name="buddy">
-           <cstring>lineEdit_5</cstring>
+           <cstring>passwordLineEdit</cstring>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_5">
+         <widget class="QLineEdit" name="passwordLineEdit">
           <property name="font">
            <font>
             <family>Sans Serif</family>
@@ -232,17 +235,17 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_5">
+         <widget class="QLabel" name="confirmPasswordLabel">
           <property name="text">
            <string>Confirm password:</string>
           </property>
           <property name="buddy">
-           <cstring>lineEdit_3</cstring>
+           <cstring>confirmPasswordLineEdit</cstring>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_3">
+         <widget class="QLineEdit" name="confirmPasswordLineEdit">
           <property name="font">
            <font>
             <family>Sans Serif</family>
@@ -262,27 +265,27 @@
    <item row="5" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QGroupBox" name="groupBox_3">
+      <widget class="QGroupBox" name="thisGroupBox">
        <property name="title">
         <string>Hide/Show this drive</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QRadioButton" name="radioButton_3">
+         <widget class="QRadioButton" name="noChangeThisRadioButton">
           <property name="text">
            <string>No change</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QRadioButton" name="radioButton_4">
+         <widget class="QRadioButton" name="hideThisRadioButton">
           <property name="text">
            <string>Hide this drive</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QRadioButton" name="radioButton_5">
+         <widget class="QRadioButton" name="showThisRadioButton">
           <property name="text">
            <string>Show this drive</string>
           </property>
