chore: add list-box widget files

--- a/src/gui/listboxwidget.ui
+++ b/src/gui/listboxwidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MultiLineDialog</class>
- <widget class="QDialog" name="MultiLineDialog">
+ <class>ListBoxDialog</class>
+ <widget class="QDialog" name="ListBoxDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -55,7 +55,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>MultiLineDialog</receiver>
+   <receiver>ListBoxDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -71,7 +71,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>MultiLineDialog</receiver>
+   <receiver>ListBoxDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
