--- a/src/gui/contentwidget.ui
+++ b/src/gui/contentwidget.ui
@@ -179,7 +179,7 @@
         <item row="5" column="0">
          <widget class="QDialogButtonBox" name="policyStateButtonBox">
           <property name="standardButtons">
-           <set>QDialogButtonBox::Apply|QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+           <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
           </property>
          </widget>
         </item>
