feat: add about dialog

--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -87,6 +87,7 @@
     <property name="title">
      <string>&amp;Help</string>
     </property>
+    <addaction name="actionAbout"/>
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_View"/>
@@ -268,6 +269,11 @@
   <action name="actionLanguage">
    <property name="text">
     <string>&amp;Language</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>&amp;About</string>
    </property>
   </action>
  </widget>
