fix: improve about dialog to look like admc

--- a/src/gui/aboutdialog.ui
+++ b/src/gui/aboutdialog.ui
@@ -57,7 +57,7 @@
    <item>
     <widget class="QLabel" name="versionLabel">
      <property name="text">
-      <string notr="true">Version 0.2.0</string>
+      <string>Version 0.2.0</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
