--- a/src/gui/contentwidget.ui
+++ b/src/gui/contentwidget.ui
@@ -174,6 +174,9 @@
               <verstretch>1</verstretch>
              </sizepolicy>
             </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="frameShape">
              <enum>QFrame::Box</enum>
             </property>
@@ -205,6 +208,9 @@
               <width>215</width>
               <height>0</height>
              </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
             </property>
             <property name="readOnly">
              <bool>true</bool>
