--- a/src/gui/contentwidget.ui
+++ b/src/gui/contentwidget.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="3,1">
    <property name="leftMargin">
     <number>0</number>
    </property>
@@ -27,7 +27,20 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QListView" name="contentListView"/>
+    <widget class="QListView" name="contentListView">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>200</width>
+       <height>0</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QWidget" name="widget" native="true">
