--- a/src/gui/contentwidget.ui
+++ b/src/gui/contentwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>770</width>
-    <height>488</height>
+    <height>499</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -80,7 +80,14 @@
        <property name="verticalSpacing">
         <number>5</number>
        </property>
-       <item row="0" column="0">
+       <item row="4" column="0">
+        <widget class="QDialogButtonBox" name="policyStateButtonBox">
+         <property name="standardButtons">
+          <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
         <widget class="QSplitter" name="helpSplitter">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -155,7 +162,7 @@
                 <x>0</x>
                 <y>0</y>
                 <width>223</width>
-                <height>315</height>
+                <height>288</height>
                </rect>
               </property>
              </widget>
@@ -254,11 +261,35 @@
          </widget>
         </widget>
        </item>
-       <item row="1" column="0">
-        <widget class="QDialogButtonBox" name="policyStateButtonBox">
-         <property name="standardButtons">
-          <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+       <item row="0" column="0">
+        <widget class="QFrame" name="policyNameFrame">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
+         <property name="frameShape">
+          <enum>QFrame::StyledPanel</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Raised</enum>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_3">
+          <item row="0" column="0">
+           <widget class="QLabel" name="policyNameLabel">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </item>
       </layout>
